    - Remove patches/any/cvs-ignore-origin-privileged.diff (merged upstream).
    - Remove patches/any/submitted-etc-resolv.conf.diff (obsolete).
    - Update patches/any/submitted-bits-fcntl_h-at.diff.
    - Remove patches/any/submitted-nis-shadow.diff (obsolete).
    - Remove patches/any/submitted-futex_robust_pi.diff (obsolete).
  * debian/sysdeps/*.mk, debhelper.in/libc.preinst: bump minimal Linux
    kernel version to 2.6.26, and minimal FreeBSD kernel version to 
    8.0.0.  Closes: #610475.
  * Add /etc/default/nss.
  * Add patches/all/local-nis-shadow.diff to change default value of
    ADJUNCT_AS_SHADOW to TRUE. This avoid NIS password leakage 
    (CVE-2010-0015), but can be changed to FALSE to accomomdate some
    NIS installations.  Closes: #566297, #566844.
  * kfreebsd/local-sysdeps.diff: update to revision 3252 (from glibc-bsd)
    Closes: #602776.
  * debian/rules: split build-indep and build-arch targets.  Closes: 
    #611926.
  * sysdeps/sparc.mk, sysdeps/sparc64.mk: build with --enable-multi-arch.
  * sysdeps/powerpc.mk, sysdeps/ppc64.mk: build with --enable-multi-arch.
  * Drop libc6-sparcv9b package on sparc/sparc64, optimizations are now
    done through multi-arch (STT_GNU_IFUNC).
  * Add patches/localedata/locale-C.diff to create a C locale.
  * Build and install the C locales in libc-bin.  Closes: #609306.
  * Bump to Standards-Version 3.9.1 (no changes).
  * Add patches/submitted-rwlock-stack-imbalance.diff to fix regression 
    in pthread_rwlock_timedrdlock() and pthread_rwlock_timedwrlock().
  * Whitelist tst-makecontext3.out test on ia64, as it is new and can't 
    succeed on this architecture.
  * debian/quiltrc: use new option "--reject-format=unified" instead of
    "--unified-reject-files".

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 08 Feb 2011 09:27:55 +0100

eglibc (2.11.2-11) unstable; urgency=low

  * patches/kfreebsd/local-sysdeps.diff: remove stub marks for at* 