@@ -85,6 +85,7 @@ eglibc (2.13-0exp1) experimental; urgency=low
     - Update patches/any/submitted-bits-fcntl_h-at.diff.
     - Remove patches/any/submitted-nis-shadow.diff (obsolete).
     - Remove patches/any/submitted-futex_robust_pi.diff (obsolete).
+    - Update patches/kfreebsd/local-readdir_r.diff.
   * debian/sysdeps/*.mk, debhelper.in/libc.preinst: bump minimal Linux
     kernel version to 2.6.26, and minimal FreeBSD kernel version to 
     8.0.0.  Closes: #610475.
